force-app/main/default/objects/Enrichment_Log_Field__c/Enrichment_Log_Field__c.object-meta.xml
<CustomObject>
    <description>Per-field result of a single Amplemarket enrichment call.</description>
    <label>Enrichment Log Field</label>
    <nameField>
        <displayFormat>ELF-{0000000}</displayFormat>
        <label>Enrichment Log Field Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrichment Log Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>