force-app/main/default/objects/Enrichment_Log_Field__c/fields/Amplemarket_Field__c.field-meta.xml
<CustomField>
    <fullName>Amplemarket_Field__c</fullName>
    <label>Amplemarket Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>