force-app/main/default/objects/Enrichment_Log_Field__c/fields/Enrichment_Log__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Log__c</fullName>
    <label>Enrichment Log</label>
    <referenceTo>Enrichment_Log__c</referenceTo>
    <relationshipLabel>Field Outcomes</relationshipLabel>
    <relationshipName>Field_Outcomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>