force-app/main/default/objects/Enrichment_Log_Field__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>